fixed font and spacing issue

--- a/style.css
+++ b/style.css
@@ -67,9 +67,9 @@ body{
 
 #fiveDayForecast{
     background:#3aafa9;
-    padding:25px;
+    padding:20px;
     font-family: 'Pacifico', cursive;
-    font-size: 20pt;
+    font-size: 15pt;
 
 }
 
